--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,6 +25,11 @@ h3 {
     border: 0;
 }
 
+.table td {
+    border-left: 1px solid #f3f3f3; 
+    border-bottom: 1px solid #f3f3f3; 
+}
+
 .selector:hover {
     color: white;
     background-color: black;
