--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,25 @@
-.jumbotron {
-    margin-bottom: 25px;
-    padding: 25px 0px;
-    border-radius: .25rem;
 
+.container {
+    height: 100%;
+    padding: 15px;
+}
+.jumbotron {
+    margin-bottom: 0px;
+    padding: 25px 0px;
+
+}
+
+a:visited {
+    color: white;
 }
 h3 {
     margin: 0;
 }
+
+a {
+    font-size: 14pt;
+}
+
 .row {
     margin-bottom: 15px;
     margin-top: 15px;
@@ -34,6 +47,10 @@ h3 {
     color: white;
     background-color: black;
     
+}
+
+.caution {
+    background-color: red;
 }
 
 .weekDaysContainer {
