Full operation for 'AÑADIR LISTA DE RAYA' and 'REGISTRO DE TRABAJADORES'. Both tables accept Edition Mode to change existing data. Next step, pre-fill 'AÑADIR LISTA DE RAYA' with 'RAYA' and 'RANGO' from 'REGISTRO DE TRABAJADORES' table once the user selects 'trabajador'.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,8 +19,8 @@ h3 {
 a {
     font-size: 14pt;
 }
-
-.row {
+            
+.row {  
     margin-bottom: 15px;
     margin-top: 15px;
 }
@@ -41,6 +41,12 @@ a {
 .table td {
     border-left: 1px solid #f3f3f3; 
     border-bottom: 1px solid #f3f3f3; 
+}
+
+td.selector {
+    min-width: 70px;
+    font-size: 8pt;
+    word-break: break-all;
 }
 
 .selector:hover {
