--- a/assets/css/listaTrabajadores.css
+++ b/assets/css/listaTrabajadores.css
@@ -38,7 +38,7 @@ a {
 }
 
 .table td {
-    border-left: 1px solid #f3f3f3; 
+    border-right: 1px solid #f3f3f3; 
     border-bottom: 1px solid #f3f3f3; 
 }
 
