--- a/assets/css/listaTrabajadores.css
+++ b/assets/css/listaTrabajadores.css
@@ -4,7 +4,7 @@ html,
 body {
     /* zoom: 100vw; */
     width: 100%;
-    min-width: 390px;
+    min-width: 320px;
     min-height: 100vh;
 
 }
@@ -12,6 +12,7 @@ body {
 .container {
     height: 100%;
     padding: 15px;
+    max-width: 100%;
 }
 
 h3 {
