--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -78,6 +78,29 @@ td.selector {
 }
 
 
+/* ============================== TABLE HEADERS */
+
+#obra, #contratista {
+    /* padding: 0; */
+    align-items: flex-start;
+    height:70px;
+    min-width:180px;
+    margin:0;
+    padding:0;
+}
+
+#obraSelector, #constratistaSelector {
+    padding: 0;
+    color: #212529;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 9pt;
+    font-weight: 700;
+    background-color: rgba(0,0,0,.03);
+    border-radius: 0;
+    border: 1px solid rgba(0,0,0,.03); 
+}
+
+
 /* ============================== MODAL */
 
 .caution {
